--- a/src/app/modules/user/components/navbar/navbar.component.html
+++ b/src/app/modules/user/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
     <!-- Navigation Links -->
     <ul class="flex space-x-4">
-      <li><a href="#" class="text-white">Home</a></li>
+      <li><a routerLink="/home" class="text-white">Home</a></li>
       <li><a href="#" class="text-white">Books</a></li>
       <li><a routerLink="/borrowed" class="text-white">borrowed </a></li>
       <li><a href="#" class="text-white" routerLink="/profile">profile</a></li>
