--- a/src/app/modules/admin/components/listbooks/listbooks.component.html
+++ b/src/app/modules/admin/components/listbooks/listbooks.component.html
@@ -1,48 +1,74 @@
-
-<div class="bg-cover bg-center h-[300px] flex items-center" style="background-image: url('https://cdn.pixabay.com/photo/2017/08/06/22/01/books-2596809_640.jpg')">
-    <div class="text-white text-center mx-auto">
-      <h1 class="text-4xl font-bold mb-4">Book Library Admin Panel</h1>
-      <p class="text-lg">Manage your book collection with ease.</p>
-    </div>
+<div
+  class="bg-cover bg-center h-[300px] flex items-center"
+  style="
+    background-image: url('https://cdn.pixabay.com/photo/2017/08/06/22/01/books-2596809_640.jpg');
+  "
+>
+  <div class="text-white text-center mx-auto">
+    <h1 class="text-4xl font-bold mb-4">Book Library Admin Panel</h1>
+    <p class="text-lg">Manage your book collection with ease.</p>
   </div>
-  
+</div>
+
 <div class="flex flex-wrap p-10">
-    <div *ngFor="let book of books" class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/4 p-4">
-      <div class="bg-white rounded-md shadow-md p-4">
-        <h2 class="text-xl font-semibold text-indigo-800">{{book.name}}</h2>
-        <p class="text-gray-700">Author: {{book.author}}</p>
-        <p class="text-gray-700">Price: ${{book.price}}</p>
-        <p class="text-gray-700">Available: {{book?.available}}</p>
-        <button [routerLink]="'/adminhome/editbook/'+ book._id" class="mt-4 bg-indigo-800 text-white px-4 py-2 rounded-md">Edit Book</button>
-      </div>
+  <div
+    *ngFor="let book of books"
+    class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/4 p-4"
+  >
+    <div class="bg-white rounded-md shadow-md p-4">
+      <h2 class="text-xl font-semibold text-indigo-800">{{ book.name }}</h2>
+      <p class="text-gray-700">Author: {{ book.author }}</p>
+      <p class="text-gray-700">Price: ${{ book.price }}</p>
+      <p class="text-gray-700">Available: {{ book?.available }}</p>
+      <button
+        [routerLink]="'/adminhome/editbook/' + book._id"
+        class="mt-4 bg-indigo-800 text-white px-4 py-2 rounded-md"
+      >
+        Edit Book
+      </button>
     </div>
   </div>
-  
-  
+</div>
 
-<div *ngIf="!books?.length" class="flex justify-center items-center ">
-
-    <div class="max-w-md bg-yellow-100 border-l-4 border-yellow-500 p-6 rounded-md shadow-md">
-      <div class="flex flex-col items-center">
-        
-        <div class="bg-yellow-500 text-white rounded-full p-3">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h0M12 17h0M2 12s5.333-8 10-8 10 8 10 8-5.333 8-10 8-10-8-10-8z"></path>
-          </svg>
-        </div>
-  
-        
-        <div class="ml-4">
-          <h2 class="text-lg font-semibold text-gray-800">sorry currently there is no books here!</h2>
-        </div>
+<div *ngIf="!books?.length" class="flex justify-center items-center">
+  <div
+    class="max-w-md bg-yellow-100 border-l-4 border-yellow-500 p-6 rounded-md shadow-md"
+  >
+    <div class="flex flex-col items-center">
+      <div class="bg-yellow-500 text-white rounded-full p-3">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 9v2m0 4h0M12 17h0M2 12s5.333-8 10-8 10 8 10 8-5.333 8-10 8-10-8-10-8z"
+          ></path>
+        </svg>
       </div>
-  
-      
-      <p class="text-gray-600 mt-2">This is a warning message. Please take appropriate action.</p>
-       <div class="flex caption-bottom gap-5">
-            <h3>you have the authorization to add books </h3> 
-            <button (click)="toAddpage()" class="h-8 w-24 rounded bg-green-400 text-white font-medium">add now</button>
-       </div>
+
+      <div class="ml-4">
+        <h2 class="text-lg font-semibold text-gray-800">
+          sorry currently there is no books here!
+        </h2>
+      </div>
+    </div>
+
+    <p class="text-gray-600 mt-2">
+      This is a warning message. Please take appropriate action.
+    </p>
+    <div class="flex caption-bottom gap-5">
+      <h3>you have the authorization to add books</h3>
+      <button
+        (click)="toAddpage()"
+        class="h-8 w-24 rounded bg-green-400 text-white font-medium"
+      >
+        add now
+      </button>
     </div>
   </div>
-  
+</div>
