--- a/src/app/modules/user/components/book-card/book-card.component.html
+++ b/src/app/modules/user/components/book-card/book-card.component.html
@@ -6,14 +6,9 @@
       <p class="text-gray-600">{{book?.author}}</p>
       <p class="text-gray-600">{{book?.price}}</p>
       <p class="text-gray-600">{{book?.available}}</p>
-      <div *ngIf="!borrow">
-        <button class="bg-yellow-500 h-8 w-24 hover:bg-yellow-600 text-white font-semibold py-2 px-4 rounded-full transition duration-300">
+      <div>
+        <button routerLink="borrowed" (click)="borrowBooks(book._id)" class="bg-yellow-500 h-8 w-24 hover:bg-yellow-600 text-white font-semibold py-2 px-4 rounded-full transition duration-300">
           Borrow
-        </button>
-      </div>
-      <div *ngIf="borrow">
-        <button class="bg-yellow-500 h-8 w-24 hover:bg-yellow-600 text-white font-semibold py-2 px-4 rounded-full transition duration-300">
-          Return
         </button>
       </div>
     </div>
