profile updation done

--- a/src/app/modules/user/components/profile/profile.component.html
+++ b/src/app/modules/user/components/profile/profile.component.html
@@ -30,7 +30,7 @@
             </div>
 
             <!-- Logout Button -->
-            <button class="mt-6 bg-red-500 text-white py-2 px-4 rounded-md hover:bg-red-600">Logout</button>
+            <button routerLink="/updateprofile" class="mt-6 bg-red-500 text-white py-2 px-4 rounded-md hover:bg-red-600">update profile</button>
 
         </div>
 
